hard-gists/1947166/run.log
=== Docker Run Log for 1947166 ===
Started at: Mi 29. Okt 12:35:41 CET 2025

[2025-10-29 12:35:41] START: Running container for 1947166
[2025-10-29 12:35:42] SUCCESS: Container 48efe269c7c51de9d5a4538326551f8bec0b51db2c26a9dc9ccd32b412a8883d started for 1947166
=== Container logs for 1947166 ===
  File "/snippet.py", line 14
    print title.extract()
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1947166 ===
[2025-10-29 12:35:44] INFO: Container 48efe269c7c51de9d5a4538326551f8bec0b51db2c26a9dc9ccd32b412a8883d has stopped
